--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ http://www.tooplate.com/view/2099-scenic
 
                <div class="col-md-8 col-sm-12">
                     <div class="home-text">
-                         <h1>Your Website has a video background!</h1>
-                         <p>Feel free to download and use HTML templates from Tooplate</p>
+                         <h1>Minifiguras e impresiones 3D JP3d</h1>
+                         <p>Te dejo todas mis creaciones en esta web para que puedas verlas</p>
                          <ul class="section-btn">
-                              <a href="#about" class="smoothScroll"><span data-hover="Discover More">Discover More</span></a>
+                              <a href="#about" class="smoothScroll"><span data-hover="Discover More">Descubre más</span></a>
                          </ul>
                     </div>
                </div>
