--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ http://www.tooplate.com/view/2099-scenic
                          <h1>Minifiguras e impresiones 3D JP3d</h1>
                          <p>Te dejo todas mis creaciones en esta web para que puedas verlas</p>
                          <ul class="section-btn">
-                              <a href="#about" class="smoothScroll"><span data-hover="Discover More">Descubre más</span></a>
+                              <a href="#about" class="smoothScroll"><span data-hover="Discover">Descubre mas</span></a>
                          </ul>
                     </div>
                </div>
@@ -103,8 +103,8 @@ http://www.tooplate.com/view/2099-scenic
 
                <div class="col-md-offset-1 col-md-10 col-sm-12">
                     <div class="about-info">
-                         <h3>Introducing Scenic</h3>
-                         <h1>This template is designed for you. Sed ornare, tortor nec placerat lacinia, leo quam rutrum leo, eget posuere ipsum sem eu justo. Integer nunc libero.</h1>
+                         <h3>Conociendonos</h3>
+                         <h1>blabalbalblablalbalblablblalaba</h1>
                     </div>
                </div>
 
