--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ http://www.tooplate.com/view/2099-scenic
 
      <!-- Video -->
      <video controls="" autoplay="" loop="" muted>
-          <source src="videos/video.mp4" type="video/mp4">
+          <source src="videos/video1.mp4" type="video/mp4">
           Your browser does not support the video tag.
      </video>
 </section>
@@ -204,7 +204,7 @@ http://www.tooplate.com/view/2099-scenic
                <div id="owl-team" class="owl-carousel">
                     <div class="col-md-4 col-sm-4 item">
                          <div class="team-item">
-                              <img src="images/team-image1.jpg" class="img-responsive" alt="">
+                              <img src="images/imagen1.jpg.jpeg" class="img-responsive" alt="">
                               <div class="team-overlay">
                                    <ul class="social-icon">
                                         <li><a href="#" class="fa fa-twitter"></a></li>
